{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "PlayerActions",
            "id": "9dcbf238-ac42-4e2b-8caa-4cec1bcb1519",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "729ff90b-d372-4753-b768-0b679a144711",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "StopBuilding",
                    "type": "Button",
                    "id": "3054e4c8-2bdb-44da-ab06-e48b44e6337c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlaceBuilding",
                    "type": "Button",
                    "id": "a3d3769f-9af0-43c1-900c-9d5f497a57c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "796719a4-243c-4410-b3e7-772569247922",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "58e9750d-8038-4e06-a2dc-4d7e4409e01c",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "26e5533a-2cac-4340-89bb-4f38f4b6a980",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "37248835-b78c-4e1e-94a8-971581889797",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e99efc61-fe90-44ff-b97b-b567548f2588",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "eab6fbb9-4341-44b3-b021-974fd2de5394",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3def58f1-c007-4e54-b2b8-08e662c39aa0",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StopBuilding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85a01824-a384-4286-a4f1-c612f52dc6d3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceBuilding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5eb2e6a-37a5-4ec8-9072-8db78bcbe32c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BuildBarKeys",
            "id": "25bd0841-7bcf-4afa-ac3f-9493533b4ad8",
            "actions": [
                {
                    "name": "Slot_1",
                    "type": "Button",
                    "id": "b665ec19-11db-4dd3-9fce-6ba010744103",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot_2",
                    "type": "Button",
                    "id": "f4dfc3fa-1fd2-45b6-a04d-399532080dc9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot_3",
                    "type": "Button",
                    "id": "f0583459-538c-421d-be23-5a35c337a33f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot_4",
                    "type": "Button",
                    "id": "03a22577-0399-4123-9387-4605e71d03f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot_5",
                    "type": "Button",
                    "id": "570b9083-fc56-4703-ad8f-2a920a5c6c71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot_6",
                    "type": "Button",
                    "id": "72906023-fe74-4d4f-880f-c510ec8ac214",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot_7",
                    "type": "Button",
                    "id": "28e15b8d-c7cd-4dac-8bb2-4409029d48eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot_8",
                    "type": "Button",
                    "id": "10893814-2024-43df-a575-df236e69d001",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slot_9",
                    "type": "Button",
                    "id": "bd3092f6-06b5-4120-b2ad-9b32983088fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c8477fbc-7395-4ad3-91fd-59c140c35ed0",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cbf4ada9-bc1d-4348-9cc9-db56a541a94e",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "061645e0-6823-4c3b-99ea-94e17a4606f0",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3acd1a92-9882-4a94-982c-2ae32ec6b340",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bb951cf-d568-4ed6-9c77-b83379389a8d",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8e61cf7-59d5-4d35-8e07-5edf663f4119",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec172dc7-a6bd-4378-98e0-25f1bba48d0b",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bbfcc1f0-de1a-4200-a3bc-31648e4d4bd6",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35468dd6-92af-4e20-b061-a1cb1b18807f",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot_9",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TowerSelection",
            "id": "7c73602b-c238-45e7-a583-b85f34dfe8a2",
            "actions": [
                {
                    "name": "TowerDrag",
                    "type": "Button",
                    "id": "54988bd9-e338-441f-94c5-02d7095621a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenDescription",
                    "type": "Button",
                    "id": "4d5c89c3-7231-4798-9e33-5e0410e50df3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddTower",
                    "type": "Button",
                    "id": "1daab2f0-c849-4f6c-9330-08a446ca0f29",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0d94f210-8333-43e3-bfc3-86256264368b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.05,pressPoint=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "TowerDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01821edc-6f11-43b4-87d0-f4c8c963ba09",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenDescription",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87f75d57-b49a-45ef-8a56-347d464d6949",
                    "path": "<Mouse>/leftButton",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "AddTower",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardMouse",
            "bindingGroup": "KeyboardMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}